removed margin for close buttons, fixes spacing

--- a/userChrome.css
+++ b/userChrome.css
@@ -106,7 +106,6 @@ https://addons.mozilla.org/en-US/firefox/addon/dark-chromium-esque-theme/
 /* 		- Replicating the chromium-based feature */
 .tabbrowser-tab:not([selected]):not([pinned]) .tab-close-button {
 	visibility: hidden !important;
-	margin-left: -16px !important;
 }
 
 .tabbrowser-tab:not([selected]):not([pinned]):hover .tab-close-button {
